
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int OSSpinLockTry (int *) ;
 int lock ;
 int make_iokit_call () ;

void* thread_func(void* arg){
  int got_it = 0;
  while (!got_it) {
    got_it = OSSpinLockTry(&lock);
  }



  make_iokit_call();
  return ((void*)0);
}
